"General info" page overhaul

--- a/dataverse-webapp/src/main/webapp/guestbook.xhtml
+++ b/dataverse-webapp/src/main/webapp/guestbook.xhtml
@@ -54,25 +54,25 @@
                             <div class="checkbox">
                                 <label jsf:for="nameRequiredCb">
                                     <input type="checkbox" jsf:id="nameRequiredCb"
-                                           jsf:value="#{GuestbookPage.guestbook.nameRequired}"/> #{bundle.name}
+                                           jsf:value="#{GuestbookPage.guestbook.nameRequired}"/> <span>#{bundle.name}</span>
                                 </label>
                             </div>
                             <div class="checkbox">
                                 <label jsf:for="emailRequiredCb">
                                     <input type="checkbox" jsf:id="emailRequiredCb"
-                                           jsf:value="#{GuestbookPage.guestbook.emailRequired}"/> #{bundle.email}
+                                           jsf:value="#{GuestbookPage.guestbook.emailRequired}"/> <span>#{bundle.email}</span>
                                 </label>
                             </div>
                             <div class="checkbox">
                                 <label jsf:for="institutionRequiredCb">
                                     <input type="checkbox" jsf:id="institutionRequiredCb"
-                                           jsf:value="#{GuestbookPage.guestbook.institutionRequired}"/> #{bundle.institution}
+                                           jsf:value="#{GuestbookPage.guestbook.institutionRequired}"/> <span>#{bundle.institution}</span>
                                 </label>
                             </div>
                             <div class="checkbox">
                                 <label jsf:for="positionRequiredCb">
                                     <input type="checkbox" jsf:id="positionRequiredCb"
-                                           jsf:value="#{GuestbookPage.guestbook.positionRequired}"/> #{bundle.position}
+                                           jsf:value="#{GuestbookPage.guestbook.positionRequired}"/> <span>#{bundle.position}</span>
                                 </label>
                             </div>
                         </div>
