--- a/dataverse-webapp/src/main/webapp/metrics.xhtml
+++ b/dataverse-webapp/src/main/webapp/metrics.xhtml
@@ -9,29 +9,59 @@
 <h:body>
     <f:metadata>
         <f:viewAction action="#{MetricsPage.init}"/>
+        <f:viewAction action="#{UsersChart.init}" />
     </f:metadata>
 
     <ui:composition template="/dataverse_template.xhtml">
         <ui:define name="body">
             <h3><h:outputText value="#{bundle['metrics.title']}"/></h3>
-            <h:form id="metricsForm">
-                <p:tabView scrollable="true">
-                    <p:tab title="#{bundle['metrics.newDatasets']}">
-                        <h:panelGrid columns="3" style="margin-bottom:10px;" cellpadding="25">
-                            <p:selectOneRadio id="model" value="#{MetricsPage.mode}" style="padding-left: 10px">
-                                <p:ajax event="change" update="metricsForm" listener="#{MetricsPage.changeDatasetMetricsModel}"/>
-                                <f:selectItem itemLabel="#{bundle['metrics.peryear']}" itemValue="YEAR"/>
-                                <f:selectItem itemLabel="#{bundle['metrics.permonth']}" itemValue="MONTH"/>
-                            </p:selectOneRadio>
-                            <p:selectOneMenu id="years" value="#{MetricsPage.selectedYear}" disabled="#{MetricsPage.mode != 'MONTH'}">
-                                <p:ajax event="change" update="metricsForm" listener="#{MetricsPage.changeDatasetMetricsModel}"/>
-                                <f:selectItems value="#{MetricsPage.yearlyDatasetStats}" var="metrics"
-                                               itemLabel="#{metrics.year}" itemValue="#{metrics.year}"/>
-                            </p:selectOneMenu>
-                        </h:panelGrid>
-                        <p:chart id="newDatasetsChart" type="bar" model="#{MetricsPage.barModel}" style="height:300px"/>
-                    </p:tab>
-                </p:tabView>
+
+            <!-- Published Datasets Chart -->
+            <h:form id="publishedDatasetsForm">
+                <h4><h:outputText value="#{bundle['metrics.chart.title.publishedDatasets']}" /></h4>
+                <p:panelGrid>
+                    <h:panelGrid columns="3" style="margin-bottom:10px;" cellpadding="25">
+                        <p:selectOneRadio id="model" value="#{MetricsPage.mode}" style="padding-left: 10px">
+                            <p:ajax event="change" update="publishedDatasetsForm" listener="#{MetricsPage.changeDatasetMetricsModel}"/>
+                            <f:selectItem itemLabel="#{bundle['metrics.peryear']}" itemValue="YEAR"/>
+                            <f:selectItem itemLabel="#{bundle['metrics.permonth']}" itemValue="MONTH"/>
+                        </p:selectOneRadio>
+                        <p:selectOneMenu id="years" value="#{MetricsPage.selectedYear}" disabled="#{MetricsPage.mode != 'MONTH'}">
+                            <p:ajax event="change" update="publishedDatasetsForm" listener="#{MetricsPage.changeDatasetMetricsModel}"/>
+                            <f:selectItems value="#{MetricsPage.publishedDatasetsYearlyStats}" var="metrics"
+                                           itemLabel="#{metrics.year}" itemValue="#{metrics.year}"/>
+                        </p:selectOneMenu>
+                    </h:panelGrid>
+                    <p:chart id="newDatasetsChart"
+                             type="bar"
+                             model="#{MetricsPage.publishedDatasetsModel}"
+                             style="height:300px"
+                             responsive="true" />
+                </p:panelGrid>
+            </h:form>
+
+            <!-- Authenticated Users Chart-->
+            <h:form id="usersCountForm">
+                <h4><h:outputText value="#{bundle['metrics.chart.title.authenticatedUsers']}" /></h4>
+                <p:panelGrid>
+                    <h:panelGrid columns="3" style="margin-bottom:10px;" cellpadding="25">
+                        <p:selectOneRadio id="users_mode" value="#{UsersChart.mode}" style="padding-left: 10px">
+                            <p:ajax event="change" update="usersCountForm" listener="#{UsersChart.changeChartGrouping}"/>
+                            <f:selectItem itemLabel="#{bundle['metrics.peryear']}" itemValue="YEAR"/>
+                            <f:selectItem itemLabel="#{bundle['metrics.permonth']}" itemValue="MONTH"/>
+                        </p:selectOneRadio>
+                        <p:selectOneMenu id="users_years" value="#{UsersChart.selectedYear}" disabled="#{UsersChart.mode != 'MONTH'}">
+                            <p:ajax event="change" update="usersCountForm" listener="#{UsersChart.changeChartGrouping}"/>
+                            <f:selectItems value="#{UsersChart.usersYearlyStats}" var="metrics"
+                                           itemLabel="#{metrics.year}" itemValue="#{metrics.year}"/>
+                        </p:selectOneMenu>
+                    </h:panelGrid>
+                    <p:chart id="newUsersChart"
+                             type="bar"
+                             model="#{UsersChart.usersChart}"
+                             style="height:300px"
+                             responsive="true" />
+                </p:panelGrid>
             </h:form>
         </ui:define>
     </ui:composition>
