--- a/dataverse-webapp/src/main/webapp/metrics.xhtml
+++ b/dataverse-webapp/src/main/webapp/metrics.xhtml
@@ -8,8 +8,9 @@
 <f:view locale="#{dataverseSession.localeCode}">
 <h:body>
     <f:metadata>
-        <f:viewAction action="#{MetricsPage.init}"/>
+        <f:viewAction action="#{PublishedDatasets.init}"/>
         <f:viewAction action="#{UsersChart.init}" />
+        <f:viewAction action="#{FilesChart.init}" />
     </f:metadata>
 
     <ui:composition template="/dataverse_template.xhtml">
@@ -18,23 +19,47 @@
 
             <!-- Published Datasets Chart -->
             <h:form id="publishedDatasetsForm">
-                <h4><h:outputText value="#{bundle['metrics.chart.title.publishedDatasets']}" /></h4>
+                <h4><h:outputText value="#{bundle['metrics.chart.publishedDatasets.title']}" /></h4>
                 <p:panelGrid>
                     <h:panelGrid columns="3" style="margin-bottom:10px;" cellpadding="25">
-                        <p:selectOneRadio id="model" value="#{MetricsPage.mode}" style="padding-left: 10px">
-                            <p:ajax event="change" update="publishedDatasetsForm" listener="#{MetricsPage.changeDatasetMetricsModel}"/>
+                        <p:selectOneRadio id="model" value="#{PublishedDatasets.mode}" style="padding-left: 10px">
+                            <p:ajax event="change" update="publishedDatasetsForm" listener="#{PublishedDatasets.changeDatasetMetricsModel}"/>
                             <f:selectItem itemLabel="#{bundle['metrics.peryear']}" itemValue="YEAR"/>
                             <f:selectItem itemLabel="#{bundle['metrics.permonth']}" itemValue="MONTH"/>
                         </p:selectOneRadio>
-                        <p:selectOneMenu id="years" value="#{MetricsPage.selectedYear}" disabled="#{MetricsPage.mode != 'MONTH'}">
-                            <p:ajax event="change" update="publishedDatasetsForm" listener="#{MetricsPage.changeDatasetMetricsModel}"/>
-                            <f:selectItems value="#{MetricsPage.publishedDatasetsYearlyStats}" var="metrics"
+                        <p:selectOneMenu id="years" value="#{PublishedDatasets.selectedYear}" disabled="#{PublishedDatasets.mode != 'MONTH'}">
+                            <p:ajax event="change" update="publishedDatasetsForm" listener="#{PublishedDatasets.changeDatasetMetricsModel}"/>
+                            <f:selectItems value="#{PublishedDatasets.publishedDatasetsYearlyStats}" var="metrics"
                                            itemLabel="#{metrics.year}" itemValue="#{metrics.year}"/>
                         </p:selectOneMenu>
                     </h:panelGrid>
                     <p:chart id="newDatasetsChart"
                              type="bar"
-                             model="#{MetricsPage.publishedDatasetsModel}"
+                             model="#{PublishedDatasets.publishedDatasetsModel}"
+                             style="height:300px"
+                             responsive="true" />
+                </p:panelGrid>
+            </h:form>
+
+            <!-- Published Files Chart-->
+            <h:form id="filesCountForm">
+                <h4><h:outputText value="#{bundle['metrics.chart.publishedFiles.title']}" /></h4>
+                <p:panelGrid>
+                    <h:panelGrid columns="3" style="margin-bottom:10px;" cellpadding="25">
+                        <p:selectOneRadio id="files_mode" value="#{FilesChart.mode}" style="padding-left: 10px">
+                            <p:ajax event="change" update="filesCountForm" listener="#{FilesChart.changeChartGrouping}"/>
+                            <f:selectItem itemLabel="#{bundle['metrics.peryear']}" itemValue="YEAR"/>
+                            <f:selectItem itemLabel="#{bundle['metrics.permonth']}" itemValue="MONTH"/>
+                        </p:selectOneRadio>
+                        <p:selectOneMenu id="files_years" value="#{FilesChart.selectedYear}" disabled="#{FilesChart.mode != 'MONTH'}">
+                            <p:ajax event="change" update="filesCountForm" listener="#{FilesChart.changeChartGrouping}"/>
+                            <f:selectItems value="#{FilesChart.yearlyStats}" var="metrics"
+                                           itemLabel="#{metrics.year}" itemValue="#{metrics.year}"/>
+                        </p:selectOneMenu>
+                    </h:panelGrid>
+                    <p:chart id="newFilesChart"
+                             type="bar"
+                             model="#{FilesChart.chartModel}"
                              style="height:300px"
                              responsive="true" />
                 </p:panelGrid>
@@ -42,7 +67,7 @@
 
             <!-- Authenticated Users Chart-->
             <h:form id="usersCountForm">
-                <h4><h:outputText value="#{bundle['metrics.chart.title.authenticatedUsers']}" /></h4>
+                <h4><h:outputText value="#{bundle['metrics.chart.authenticatedUsers.title']}" /></h4>
                 <p:panelGrid>
                     <h:panelGrid columns="3" style="margin-bottom:10px;" cellpadding="25">
                         <p:selectOneRadio id="users_mode" value="#{UsersChart.mode}" style="padding-left: 10px">
