--- a/dataverse-webapp/src/main/webapp/metrics.xhtml
+++ b/dataverse-webapp/src/main/webapp/metrics.xhtml
@@ -8,7 +8,7 @@
 <f:view locale="#{dataverseSession.localeCode}">
 <h:body>
     <f:metadata>
-        <f:viewAction action="#{PublishedDatasets.init}"/>
+        <f:viewAction action="#{PublishedDatasetsChart.init}"/>
         <f:viewAction action="#{UsersChart.init}" />
         <f:viewAction action="#{FilesChart.init}" />
     </f:metadata>
@@ -22,20 +22,20 @@
                 <h4><h:outputText value="#{bundle['metrics.chart.publishedDatasets.title']}" /></h4>
                 <p:panelGrid>
                     <h:panelGrid columns="3" style="margin-bottom:10px;" cellpadding="25">
-                        <p:selectOneRadio id="model" value="#{PublishedDatasets.mode}" style="padding-left: 10px">
-                            <p:ajax event="change" update="publishedDatasetsForm" listener="#{PublishedDatasets.changeDatasetMetricsModel}"/>
+                        <p:selectOneRadio id="model" value="#{PublishedDatasetsChart.mode}" style="padding-left: 10px">
+                            <p:ajax event="change" update="publishedDatasetsForm" listener="#{PublishedDatasetsChart.changeDatasetMetricsModel}"/>
                             <f:selectItem itemLabel="#{bundle['metrics.peryear']}" itemValue="YEAR"/>
                             <f:selectItem itemLabel="#{bundle['metrics.permonth']}" itemValue="MONTH"/>
                         </p:selectOneRadio>
-                        <p:selectOneMenu id="years" value="#{PublishedDatasets.selectedYear}" disabled="#{PublishedDatasets.mode != 'MONTH'}">
-                            <p:ajax event="change" update="publishedDatasetsForm" listener="#{PublishedDatasets.changeDatasetMetricsModel}"/>
-                            <f:selectItems value="#{PublishedDatasets.publishedDatasetsYearlyStats}" var="metrics"
+                        <p:selectOneMenu id="years" value="#{PublishedDatasetsChart.selectedYear}" disabled="#{PublishedDatasetsChart.mode != 'MONTH'}">
+                            <p:ajax event="change" update="publishedDatasetsForm" listener="#{PublishedDatasetsChart.changeDatasetMetricsModel}"/>
+                            <f:selectItems value="#{PublishedDatasetsChart.publishedDatasetsYearlyStats}" var="metrics"
                                            itemLabel="#{metrics.year}" itemValue="#{metrics.year}"/>
                         </p:selectOneMenu>
                     </h:panelGrid>
                     <p:chart id="newDatasetsChart"
                              type="bar"
-                             model="#{PublishedDatasets.publishedDatasetsModel}"
+                             model="#{PublishedDatasetsChart.publishedDatasetsModel}"
                              style="height:300px"
                              responsive="true" />
                 </p:panelGrid>
