--- a/dataverse-webapp/src/main/webapp/dataset.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataset.xhtml
@@ -228,6 +228,17 @@
                                                         value="#{bundle['dataset.editBtn.itemLabel.selectGuestbook']}"/>
                                             </h:outputLink>
                                         </li>
+                                        <li>
+                                            <p:commandLink id="setEmbargo"
+                                                           action="#{DatasetPage.initCurrentEmbargo()}"
+                                                           update="setEmbargoPanel"
+                                                           oncomplete="PF('setEmbargoConfirmation').show()"
+                                                           rendered="#{!DatasetPage.hasDatasetBeenPublished() or not empty DatasetPage.currentEmbargoDate}"
+                                            >
+                                                <h:outputText
+                                                        value="#{bundle['dataset.editBtn.itemLabel.embargo']}"/>
+                                            </p:commandLink>
+                                        </li>
                                         <ui:fragment
                                                 rendered="#{permissionsWrapper.canManagePermissions(DatasetPage.dataset)}">
                                             <li class="#{settingsWrapper.publicInstall ? '' : 'dropdown-submenu pull-left'}">
@@ -662,6 +673,75 @@
                                          type="button"/>
                     </div>
                 </p:dialog>
+                <!-- Set Embargo -->
+                <p:dialog id="SetEmbargo" styleClass="smallPopUp" header="#{bundle['dataset.embargo.header']}"
+                          widgetVar="setEmbargoConfirmation" modal="true">
+                    <p:fragment id="setEmbargoPanel">
+                        <p class="help-block">
+                            <h:outputFormat value="#{bundle['dataset.embargo.tip']}"
+                                            escape="false"
+                                            rendered="#{empty DatasetPage.currentEmbargoDate}"
+                            >
+                            </h:outputFormat>
+                            <h:outputFormat value="#{bundle['dataset.embargo.message']}"
+                                            escape="false"
+                                            rendered="#{not empty DatasetPage.currentEmbargoDate}"
+                            >
+                                <f:param value="#{DatasetPage.currentEmbargoDateForDisplay}"/>
+                            </h:outputFormat>
+                        </p>
+                        <div>
+                            <p:outputLabel for="embargoDatePicker" value="Embargo: " />
+                            <p:calendar
+                                    id="embargoDatePicker"
+                                    value="#{DatasetPage.currentEmbargoDate}"
+                                    showButtonBar="true"
+                                    mindate="#{DatasetPage.getTomorrowsDate()}"
+                                    effect="drop"
+                                    navigator="true"
+                                    pattern="dd/MM/yyyy"
+                                    validator="#{DatasetPage.validateEmbargoDate}"
+                                    locale="#{dataverseSession.localeCode}"
+                            />
+                            <p:message id="embargoMsg" for="embargoDatePicker" display="text" />
+                        </div>
+                        <div class="button-block">
+                            <p:commandButton value="#{bundle['dataset.embargo.setEmbargo']}"
+                                             action="#{DatasetPage.updateEmbargoDate()}"
+                                             update="setEmbargoPanel,:messagePanel"
+                                             rendered="#{!DatasetPage.hasDatasetBeenPublished()}"
+                                             oncomplete="if (args &amp;&amp; !args.validationFailed) { PF('setEmbargoConfirmation').hide(); } else { #{DatasetPage.initCurrentEmbargo()}; }"
+                            />
+                            <p:commandButton value="#{bundle['dataset.embargo.removeEmbargo']}"
+                                             onclick="PF('setEmbargoConfirmation').hide();PF('removeEmbargoConfirmation').show()"
+                                             rendered="#{!empty(DatasetPage.currentEmbargoDate)}" update="setEmbargoPanel"/>
+                            <p:commandButton styleClass="btn btn-default"
+                                             value="#{bundle.close}"
+                                             onclick="PF('setEmbargoConfirmation').hide();"
+                                             update="setEmbargoPanel, embargoDatePicker"
+                                             resetValues="true"
+                            />
+                        </div>
+                    </p:fragment>
+                </p:dialog>
+                <!-- Confirm embargo lift -->
+                <p:dialog styleClass="smallPopUp" header="#{bundle['dataset.embargo.header']}"
+                          widgetVar="removeEmbargoConfirmation" modal="true" closable="false">
+                    <p class="text-warning"><span
+                            class="glyphicon glyphicon-warning-sign"/> #{bundle['dataset.embargo.removeConfirmationText']}
+                    </p>
+                    <div class="button-block">
+                        <p:commandButton value="#{bundle['dataset.embargo.removeEmbargoConfirm']}"
+                                         immediate="true"
+                                         action="#{DatasetPage.liftEmbargo()}"
+                                         update="setEmbargoPanel,:messagePanel"
+                                         onclick="PF('removeEmbargoConfirmation').hide();"/>
+                        <p:commandButton value="#{bundle.cancel}"
+                                         onclick="PF('removeEmbargoConfirmation').hide();PF('setEmbargoConfirmation').show();"
+                                         type="button"/>
+                    </div>
+                </p:dialog>
+
                 <p:dialog styleClass="smallPopUp" header="#{bundle['file.deleteDraftDialog.header']}"
                           widgetVar="deleteVersionConfirmation" modal="true">
                     <p class="text-warning"><span
@@ -1050,7 +1130,38 @@
                     PF('inreview').show();
                 }
             </script>
+
+            <script type="text/javascript">
+                PrimeFaces.locales['pl'] = {
+                    closeText: 'Zamknij',
+                    prevText: 'Poprzedni',
+                    nextText: 'Następny',
+                    monthNames: ['Styczeń','Luty','Marzec','Kwiecień','Maj','Czerwiec','Lipiec','Sierpień','Wrzesień','Październik','Listopad','Grudzień'],
+                    monthNamesShort: ['Sty','Lut','Mar','Kwi','Maj','Cze', 'Lip','Sie','Wrz','Paź','Lis','Gru'],
+                    dayNames: ['Niedziela','Poniedziałek','Wtorek','Środa','Czwartek','Piątek','Sobota'],
+                    dayNamesShort: ['Nie','Pon','Wt','Śr','Czw','Pt','So'],
+                    dayNamesMin: ['N','P','W','Ś','Cz','P','S'],
+                    weekHeader: 'Tydzień',
+                    firstDay: 1,
+                    isRTL: false,
+                    showMonthAfterYear: false,
+                    yearSuffix: '',
+                    timeOnlyTitle: 'Tylko czas',
+                    timeText: 'Czas',
+                    hourText: 'Godzina',
+                    minuteText: 'Minuta',
+                    secondText: 'Sekunda',
+                    currentText: 'Teraz',
+                    ampm: false,
+                    month: 'Miesiąc',
+                    week: 'Tydzień',
+                    day: 'Dzień',
+                    allDayText : 'Cały dzień'
+                };
+            </script>
         </ui:define>
     </ui:composition>
 </h:body>
+
+
 </html>
