Closes #559: still no interceptor, added tests and fixed timezone issue on calendar

--- a/dataverse-webapp/src/main/webapp/dataset.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataset.xhtml
@@ -557,7 +557,7 @@
                                     </ui:fragment>
                                     <!-- Embargo -->
                                     <ui:fragment
-                                            rendered="#{DatasetPage.hasActiveEmbargo()}">
+                                            rendered="#{DatasetPage.dataset.hasActiveEmbargo()}">
                                     <div class="form-group" >
                                         <label class="col-sm-3 control-label">
                                             #{bundle['dataset.embargo.title']}
@@ -717,6 +717,7 @@
                                     pattern="dd/MM/yyyy"
                                     validator="#{DatasetPage.validateEmbargoDate}"
                                     locale="#{dataverseSession.localeCode}"
+                                    timeZone="UTC"
                             />
                             <p:message id="embargoMsg" for="embargoDatePicker" display="text" />
                         </div>
