--- a/dataverse-webapp/src/main/webapp/filesFragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/filesFragment.xhtml
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" style="margin-bottom:6px;">
+            <div class="row" style="margin-bottom:15px;">
                 <div jsf:id="filesHeaderCount" class="col-xs-3 text-left">
                     <!-- Files Count -->
                     <h:outputFormat value="#{datasetFilesTab.fileMetadatasSearch.size() == 1 ? bundle['file.count.one'] : bundle['file.count']}" rendered="#{datasetFilesTab.fileMetadatasSearch.size() gt 0}">
@@ -116,7 +116,7 @@
             <div class="row" jsf:rendered="#{datasetFilesTab.fileLabelSearchTerm.equals('') ?
                         datasetFilesTab.workingVersion.fileMetadatas.size() gt datasetFilesTab.rowsPerPage :
                         datasetFilesTab.fileMetadatasSearch.size() gt datasetFilesTab.rowsPerPage}">
-                <div class="col-xs-12 bg-warning text-left" style="font-weight:normal;padding-top:.5em;">
+                <div class="col-xs-12 bg-warning text-left" style="font-weight:normal;">
                     <!-- SELECTION MESSAGE -->
                     <p>
                         <h:outputFormat rendered="#{datasetFilesTab.selectedFiles.size() gt 0}"
