--- a/dataverse-webapp/src/main/webapp/metrics.xhtml
+++ b/dataverse-webapp/src/main/webapp/metrics.xhtml
@@ -4,7 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:p="http://primefaces.org/ui">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
+>
 <f:view locale="#{dataverseSession.localeCode}">
 <h:body>
     <f:metadata>
@@ -39,6 +41,7 @@
                              type="bar"
                              model="#{PublishedDatasetsChart.publishedDatasetsModel}"
                              style="height:300px"
+                             responsive="true"
                     />
                 </p:panelGrid>
             </h:form>
@@ -111,10 +114,12 @@
                              type="bar"
                              model="#{UsersChart.usersChart}"
                              style="height:300px"
+                             responsive="true"
                     />
                 </p:panelGrid>
             </h:form>
 
+            <!-- Used in ChartCreator class as extender -->
             <script type="text/javascript">
                 function customizeChart()
                 {
@@ -126,6 +131,9 @@
                         tooltipLocation: 'n',
                         useAxesFormatters: false,
                         tooltipAxes: 'y'
+                    };
+                    this.cfg.seriesDefaults.rendererOptions = {
+                        barWidth : 30
                     };
                 }
             </script>
