--- a/dataverse-webapp/src/main/webapp/search-include-fragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/search-include-fragment.xhtml
@@ -86,19 +86,23 @@
             <h:form id="facetType">
                 <!--DATAVERSE TOGGLE-->
                 <div class="clearfix">
-                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}" styleClass="facetTypeChBox facetLink #{SearchIncludeFragment.selectedTypesContainsDataverse() ? 'facetSelected': ''}" disabled="#{SearchIncludeFragment.selectedTypesContainsDataverseOnly()}">
+                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}"
+                            styleClass="facetTypeChBox facetLink #{SearchIncludeFragment.selectedTypes.contains(searchObjectTypeEnum.DATAVERSES) ? 'facetSelected': ''}"
+                            disabled="#{SearchIncludeFragment.selectedTypes.containsOnly(searchObjectTypeEnum.DATAVERSES)}">
                         <f:param name="q" value="#{SearchIncludeFragment.query}"/>
-                        <f:param name="types" value="#{SearchIncludeFragment.getNewSelectedTypes('dataverses')}"/>
+                        <f:param name="types" value="#{SearchIncludeFragment.getNewSelectedTypes(searchObjectTypeEnum.DATAVERSES)}"/>
                         <c:forEach items="#{SearchIncludeFragment.filterQueries}" var="clickedFilterQuery" varStatus="status">
                             <f:param name="fq#{status.index}" value='#{clickedFilterQuery}'/>
                         </c:forEach>
                         <f:param name="sort" value="#{SearchIncludeFragment.sortField}"/>
                         <f:param name="order" value="#{SearchIncludeFragment.sortOrder}"/>
                         <f:param name="page" value="1"/>
-                        <p:selectBooleanCheckbox value="#{SearchIncludeFragment.selectedTypesContainsDataverse()}" disabled="#{SearchIncludeFragment.selectedTypesContainsDataverseOnly()}"/>
+                        <p:selectBooleanCheckbox value="#{SearchIncludeFragment.selectedTypes.contains(searchObjectTypeEnum.DATAVERSES)}"
+                                disabled="#{SearchIncludeFragment.selectedTypes.containsOnly(searchObjectTypeEnum.DATAVERSES)}"/>
                     </h:outputLink>
                     <!--DATAVERSES ONLY-->
-                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}" styleClass="facetTypeLink chkbox-label-margin #{SearchIncludeFragment.selectedTypesContainsDataverse() ? 'facetSelected': ''}">
+                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}"
+                            styleClass="facetTypeLink chkbox-label-margin #{SearchIncludeFragment.selectedTypes.contains(searchObjectTypeEnum.DATAVERSES) ? 'facetSelected': ''}">
                         <f:param name="q" value="#{SearchIncludeFragment.query}"/>
                         <f:param name="types" value="dataverses"/>
                         <c:forEach items="#{SearchIncludeFragment.filterQueries}" var="clickedFilterQuery" varStatus="status">
@@ -117,19 +121,23 @@
                 </div>
                 <!--DATASETS TOGGLE-->
                 <div class="clearfix">
-                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}" styleClass="facetTypeChBox facetLink #{SearchIncludeFragment.selectedTypesContainsDataset() ? 'facetSelected': ''}" disabled="#{SearchIncludeFragment.selectedTypesContainsDatasetOnly()}">
+                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}"
+                            styleClass="facetTypeChBox facetLink #{SearchIncludeFragment.selectedTypes.contains(searchObjectTypeEnum.DATASETS) ? 'facetSelected': ''}"
+                            disabled="#{SearchIncludeFragment.selectedTypes.containsOnly(searchObjectTypeEnum.DATASETS)}">
                         <f:param name="q" value="#{SearchIncludeFragment.query}"/>
-                        <f:param name="types" value="#{SearchIncludeFragment.getNewSelectedTypes('datasets')}"/>
+                        <f:param name="types" value="#{SearchIncludeFragment.getNewSelectedTypes(searchObjectTypeEnum.DATASETS)}"/>
                         <c:forEach items="#{SearchIncludeFragment.filterQueries}" var="clickedFilterQuery" varStatus="status">
                             <f:param name="fq#{status.index}" value='#{clickedFilterQuery}'/>
                         </c:forEach>
                         <f:param name="sort" value="#{SearchIncludeFragment.sortField}"/>
                         <f:param name="order" value="#{SearchIncludeFragment.sortOrder}"/>
                         <f:param name="page" value="1"/>
-                        <p:selectBooleanCheckbox value="#{SearchIncludeFragment.selectedTypesContainsDataset()}" disabled="#{SearchIncludeFragment.selectedTypesContainsDatasetOnly()}"/>
+                        <p:selectBooleanCheckbox value="#{SearchIncludeFragment.selectedTypes.contains(searchObjectTypeEnum.DATASETS)}"
+                                disabled="#{SearchIncludeFragment.selectedTypes.containsOnly(searchObjectTypeEnum.DATASETS)}"/>
                     </h:outputLink>
                     <!--DATASETS ONLY-->
-                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}" styleClass="facetTypeLink chkbox-label-margin #{SearchIncludeFragment.selectedTypesContainsDataset() ? 'facetSelected': ''}">
+                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}"
+                            styleClass="facetTypeLink chkbox-label-margin #{SearchIncludeFragment.selectedTypes.contains(searchObjectTypeEnum.DATASETS) ? 'facetSelected': ''}">
                         <f:param name="q" value="#{SearchIncludeFragment.query}"/>
                         <f:param name="types" value="datasets"/>
                         <c:forEach items="#{SearchIncludeFragment.filterQueries}" var="clickedFilterQuery" varStatus="status">
@@ -148,19 +156,23 @@
                 </div>
                 <!--FILES TOGGLE-->
                 <div class="clearfix">
-                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}" styleClass="facetTypeChBox facetLink #{SearchIncludeFragment.selectedTypesContainsFile() ? 'facetSelected': ''}" disabled="#{SearchIncludeFragment.selectedTypesContainsFileOnly()}">
+                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}"
+                            styleClass="facetTypeChBox facetLink #{SearchIncludeFragment.selectedTypes.contains(searchObjectTypeEnum.FILES) ? 'facetSelected': ''}"
+                            disabled="#{SearchIncludeFragment.selectedTypes.containsOnly(searchObjectTypeEnum.FILES)}">
                         <f:param name="q" value="#{SearchIncludeFragment.query}"/>
-                        <f:param name="types" value="#{SearchIncludeFragment.getNewSelectedTypes('files')}"/>
+                        <f:param name="types" value="#{SearchIncludeFragment.getNewSelectedTypes(searchObjectTypeEnum.FILES)}"/>
                         <c:forEach items="#{SearchIncludeFragment.filterQueries}" var="clickedFilterQuery" varStatus="status">
                             <f:param name="fq#{status.index}" value='#{clickedFilterQuery}'/>
                         </c:forEach>
                         <f:param name="sort" value="#{SearchIncludeFragment.sortField}"/>
                         <f:param name="order" value="#{SearchIncludeFragment.sortOrder}"/>
                         <f:param name="page" value="1"/>
-                        <p:selectBooleanCheckbox value="#{SearchIncludeFragment.selectedTypesContainsFile()}" disabled="#{SearchIncludeFragment.selectedTypesContainsFileOnly()}"/>
+                        <p:selectBooleanCheckbox value="#{SearchIncludeFragment.selectedTypes.contains(searchObjectTypeEnum.FILES)}"
+                                disabled="#{SearchIncludeFragment.selectedTypes.containsOnly(searchObjectTypeEnum.FILES)}"/>
                     </h:outputLink>
                     <!--FILES ONLY-->
-                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}" styleClass="facetTypeLink chkbox-label-margin #{SearchIncludeFragment.selectedTypesContainsFile() ? 'facetSelected': ''}">
+                    <h:outputLink value="#{widgetWrapper.wrapURL(page)}"
+                            styleClass="facetTypeLink chkbox-label-margin #{SearchIncludeFragment.selectedTypes.contains(searchObjectTypeEnum.FILES) ? 'facetSelected': ''}">
                         <f:param name="q" value="#{SearchIncludeFragment.query}"/>
                         <f:param name="types" value="files"/>
                         <c:forEach items="#{SearchIncludeFragment.filterQueries}" var="clickedFilterQuery" varStatus="status">
