Closes #619: Facets and filter translations redone.

--- a/dataverse-webapp/src/main/webapp/editFilesFragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/editFilesFragment.xhtml
@@ -443,7 +443,7 @@
                             <div class="text-muted small">
                                 <h:outputText id="fileTypeOutputRegular" value="#{fileMetadata.dataFile.friendlyType}"
                                               rendered="#{!(fileMetadata.dataFile.tabularData)}"/>
-                                <h:outputText id="fileTypeOutputTabular" value="#{bundle['file.type.tabularData']}"
+                                <h:outputText id="fileTypeOutputTabular" value="#{bundle['file.type.tabular_data']}"
                                               rendered="#{fileMetadata.dataFile.tabularData}"/>
                                 <h:outputText id="fileCreatePublishDate"
                                               value=" - #{fileMetadata.getFileDateToDisplay()}"
