--- a/dataverse-webapp/src/main/webapp/editSingleFile.xhtml
+++ b/dataverse-webapp/src/main/webapp/editSingleFile.xhtml
@@ -95,7 +95,7 @@
                                 <!-- TYPE + SIZE + DATE + CHECKSUM -->
                                 <div class="text-muted small">
                                     <h:outputText id="fileTypeOutputRegular" value="#{fileMetadata.dataFile.friendlyType}" rendered="#{!(fileMetadata.dataFile.tabularData)}"/>
-                                    <h:outputText id="fileTypeOutputTabular" value="#{bundle['file.type.tabularData']}" rendered="#{fileMetadata.dataFile.tabularData}"/>
+                                    <h:outputText id="fileTypeOutputTabular" value="#{bundle['file.type.tabular_data']}" rendered="#{fileMetadata.dataFile.tabularData}"/>
                                     <h:outputText id="fileCreatePublishDate" value=" - #{fileMetadata.getFileDateToDisplay()}" rendered="#{!(empty fileMetadata.id)}"/>
                                     <div class="checksum-block">
                                         <h:outputText id="fileChecksum" value="#{fileMetadata.dataFile.tabularData ? fileMetadata.dataFile.originalChecksumType : fileMetadata.dataFile.checksumType}: #{fileMetadata.dataFile.checksumValue};" rendered="#{!(empty fileMetadata.dataFile.checksumValue)}"/>
