--- a/dataverse-webapp/src/main/webapp/replaceDatasetfiles.xhtml
+++ b/dataverse-webapp/src/main/webapp/replaceDatasetfiles.xhtml
@@ -243,7 +243,7 @@
                                                               value="#{fileMetadata.dataFile.friendlyType}"
                                                               rendered="#{!(fileMetadata.dataFile.tabularData)}"/>
                                                 <h:outputText id="fileTypeOutputTabular"
-                                                              value="#{bundle['file.type.tabularData']}"
+                                                              value="#{bundle['file.type.tabular_data']}"
                                                               rendered="#{fileMetadata.dataFile.tabularData}"/>
                                                 <h:outputText id="fileCreatePublishDate"
                                                               value=" - #{fileMetadata.getFileDateToDisplay()}"
